--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,14 @@
         <title>WebStore 17463</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/navbar.css">
+        <link rel="stylesheet" href="./css/footer.css">
+        <link rel="stylesheet" href="./css/buttons.css">
+        <link rel="stylesheet" href="./css/welcome.css">
+        <link rel="stylesheet" href="./css/catalog.css">
+        <link rel="stylesheet" href="./css/login.css">
+        <link rel="stylesheet" href="./css/registration.css">
+        <link rel="icon" type="image/x-icon" href="./images/shopping-cart.png">
     </head>
     <body>
         <script src="./javascript/main.js" type="module"></script>
